Add more info page

--- a/public/info.html
+++ b/public/info.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <main id="root"></main>
-    <script src="popup.js"></script>
+    <script src="info.js"></script>
 </body>
 </html>
