Create settings page and settings type

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <main id="root"></main>
-    <script src="info.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
